# esp32s2test

./: .gitignore  Cargo.toml  export-esp.sh  memo.txt
.cargo/: config.toml
docs/: async_env.md  neopixel.md
