[package]
edition = "2024"
name = "esptes"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esptes"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s2", "unstable"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-println = { version = "0.13.0", features = ["esp32s2"] }
esp-backtrace = { version = "0.15.0", features = ["esp32s2", "panic-handler", "exception-handler", "println"] }
static_cell = "2.1.0"
smart-leds = "0.4"
esp-hal-smartled = { version = "0.17.0", features = ["esp32s2"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s2"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
